--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -9,7 +9,7 @@ appnamespace = "Application"
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 1
 resources.db.adapter = "PDO_MYSQL"
-resources.db.params.dbname="controledefrotas"
+resources.db.params.dbname="controledefrota"
 resources.db.params.username="root"
 resources.db.params.password=""
 resources.db.params.host = "127.0.0.1"
